Logging foxtrot cluster